# NFL-Analyst-Tool

./: .editorconfig  .gitattributes  .gitignore  Dockerfile  Makefile  Pipfile-or-requirements.txt  README.md  docker-compose.yaml  generate_config.sh  pyproject.toml  requirements.txt
airflow/dags/: main.py
airflow/tasks/: extract.sql  load.sql  transform.sql
airflow/tasks/rds_load/queries/: create_tables.sql
airflow/tasks/staging/: schema.yml  validation.sql
terraform/: output.tf  rds.tf
