#from audiophile

[tool.poetry]
name = "your-project-name"
version = "0.1.0"
description = "A simple description of your project"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"  # Optional if you have a README file.
homepage = "https://your-project-homepage.com"  # Optional
repository = "https://github.com/yourusername/your-project"  # Optional

[tool.poetry.dependencies]
python = "^3.9"  # Specifies the Python version range (3.9.x)

# Your project dependencies go here, for example:
requests = "^2.26"
pandas = "^1.3"

[tool.poetry.dev-dependencies]
pytest = "^7.0"  # Development dependencies like linters or test frameworks

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
