#from audiophile

[tool.poetry]
name = "your-project-name"
version = "0.1.0"
description = "A simple description of your project"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://your-project-homepage.com"
repository = "https://github.com/yourusername/your-project"

[tool.poetry.dependencies]
python = "^3.9"

# Existing project dependencies
requests = "^2.28.2"
pandas = "^2.1.0"

# Added dependencies from Pipfile
beautifulsoup4 = "*"
mypy = "*"
pyyaml = "*"
boto3 = "*"
pydantic = "*"
psycopg2 = "*"
python-dotenv = "*"
dbt-redshift = "*"
airflow-dbt = "*"
flask = "^2.3.2"
numpy = "^1.24.3"
scikit-learn = "^1.2.2"

[tool.poetry.dev-dependencies]
# Existing dev dependencies
pytest = "^7.0"

# Added dev dependencies from Pipfile
black = "*"
sqlfluff = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

